[gd_scene load_steps=4 format=3 uid="uid://byvkv77mar56f"]

[ext_resource type="Theme" uid="uid://cf25w553mynfo" path="res://theme.tres" id="1_nvp1d"]
[ext_resource type="Script" uid="uid://bwtag7h0uwast" path="res://pages/level_editor/load_panel/load_panel.gd" id="1_qmou4"]
[ext_resource type="PackedScene" uid="uid://c8o5fiu8mc2a0" path="res://pages/level_editor/load_panel/load_row.tscn" id="2_qr47t"]

[node name="LoadPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nvp1d")
script = ExtResource("1_qmou4")

[node name="BigPanel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 0.498039)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MediumPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.266
anchor_top = 0.144
anchor_right = 0.734
anchor_bottom = 0.766
offset_left = -0.720001
offset_top = 0.479996
offset_right = 0.719971
offset_bottom = -0.280029

[node name="SmallPanel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.29
anchor_top = 0.19
anchor_right = 0.71
anchor_bottom = 0.671
offset_left = -0.800049
offset_top = -0.200012
offset_right = 0.800049
offset_bottom = 0.320007

[node name="LoadLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.443
anchor_top = 0.153
anchor_right = 0.557
anchor_bottom = 0.192
offset_left = -0.560059
offset_top = -0.240005
offset_right = 0.560059
offset_bottom = -0.360001
theme_override_font_sizes/font_size = 30
text = "-- Load Level --"
horizontal_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(808, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.29
anchor_top = 0.208
anchor_right = 0.71
anchor_bottom = 0.671
offset_left = -0.800049
offset_top = 0.360001
offset_right = 0.799927
offset_bottom = 0.320007
horizontal_scroll_mode = 0

[node name="RowHolder" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(800, 500)
layout_mode = 2

[node name="LoadRow" parent="ScrollContainer/RowHolder" instance=ExtResource("2_qr47t")]
layout_mode = 2

[node name="LoadRow2" parent="ScrollContainer/RowHolder" instance=ExtResource("2_qr47t")]
layout_mode = 2

[node name="LoadButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.29
anchor_top = 0.69
anchor_right = 0.368
anchor_bottom = 0.736
offset_left = -0.800049
offset_top = -0.200073
offset_right = -0.560059
offset_bottom = 0.119934
theme_override_font_sizes/font_size = 16
text = "Load"

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.461
anchor_top = 0.69
anchor_right = 0.539
anchor_bottom = 0.736
offset_left = -0.120056
offset_top = -0.200073
offset_right = 0.119873
offset_bottom = 0.119934
theme_override_font_sizes/font_size = 16
text = "Delete"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.632
anchor_top = 0.69
anchor_right = 0.71
anchor_bottom = 0.736
offset_left = 0.559937
offset_top = -0.200073
offset_right = 0.799927
offset_bottom = 0.119934
theme_override_font_sizes/font_size = 16
text = "Close"
